assets/variables.scss
// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
//
// The variables you want to modify
// $font-size-root: 20px0;

@layer base {
  @font-face {
    font-family: 'Open Sans';
    src: local('Open Sans'), local('OpenSans-Regular'), url('~/assets/OpenSans-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
  }

  @font-face {
    font-family: 'Libre Baskerville';
    src: local('Libre Baskerville'), local('LibreBaskerville-Regular'), url('~/assets/LibreBaskerville-Regular.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
  }

  @font-face {
    font-family: 'Raleway';
    src: local('Raleway'), local('Raleway-VariableFont'), url('~/assets/Raleway-VariableFont_wght.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  margin-block: 0;
  margin-inline: 0;
}

body {
  background-color: #050505;
  scroll-behavior: smooth;
  font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
}

h1, h2, h3 {
  font-family: 'Libre Baskerville', Arial, Helvetica, sans-serif;
}

